# tmux

./: .gitignore  .gitmodules  .mcp.json  CLAUDE.md  client.c  cmd-parse.c  cmd-parse.h  environ.c  input.c  job.c  mode-tree.c  popup.c  resize.c  server.c  spawn.c  tmux.c  tmux.h
compat/: base64.c  setenv.c
memory-bank/: README.md  activeContext.md  history.md  productContext.md  progress.md  systemPatterns.md  techContext.md
pocs/: CMakeLists.txt  CMakePresets.json  README.md  build.bat
pocs/01-conpty/: CMakeLists.txt  README.md  build.ps1  conpty_poc.c
pocs/02-named-pipes/: CMakeLists.txt  README.md  build.ps1  pipe_client.c  pipe_server.c
pocs/03-process/: CMakeLists.txt  README.md  build.ps1  process_poc.c
pocs/04-console-events/: CMakeLists.txt  README.md  build.ps1  events_poc.c
pocs/05-pdcurses/: CMakeLists.txt  README.md  build.ps1  curses_poc.c  setup_pdcurses.ps1
pocs/06-libevent-win/: CMakeLists.txt  README.md  build.ps1  libevent_poc.c  setup_libevent.ps1
windows/: .gitignore  CMakeLists.txt  build.bat  env.bat  setup-deps.bat  test.bat
windows/docs/: OPERATIONAL-RULES.md  PORTING-PLAN.md  TDD-STRATEGY.md
windows/include/: compat-win32.h  fnmatch.h  glob.h  ipc-win32.h  langinfo.h  libgen.h  pty-win32.h  pwd.h  regex.h  resolv.h  signal-win32.h  term.h  termios.h  tty-win32.h  unistd.h
windows/include/arpa/: inet.h
windows/include/netinet/: in.h
windows/include/sys/: file.h  ioctl.h  socket.h  time.h  uio.h  un.h  utsname.h  wait.h
windows/src/: daemon-win32.c  imsg-win32.c  ipc-win32.c  osdep-win32.c  proc-win32.c  pty-win32.c  signal-win32.c  tty-win32.c
